--- a/src/index.css
+++ b/src/index.css
@@ -112,11 +112,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 25px;
+  padding: 10px 15px;
   background-color: white;
   border-bottom: 1px solid #e0e0e0;
   box-shadow: 0 2px 4px rgba(0, 0, 5, 0.2);
-  font-family: 'Segoe UI', sans-serif;
   margin-bottom: 0px;
 }
 
@@ -159,4 +158,50 @@ body {
   cursor: pointer;
   color: white;
   align-self: flex-end;
+}
+
+@media (max-width:412px){
+  
+  .sidebar.collapsed {
+    width: 30px;
+    
+  }
+
+  .sidebar{
+    width: 100px;
+  }
+
+  .sidebar-title{
+    font-size: 19px;
+  }
+
+  .admin-label{
+    font-size: 11px;
+  }
+
+  .nav-links a{
+    font-size: 15px;
+    padding-left: 50px;
+    justify-content: center;
+    
+  }
+  .menu-toggle {
+    font-size: 22px;
+    margin: 0px 0px 0px 30% !important;
+    padding: 0px 0px 0px 20% !important;    
+  
+}
+
+.user-name{
+  font-size:10px;
+  
+}
+
+.logout-button{
+  width: 80px;
+  font-size:10px;
+  margin-right: 0px;
+ 
+}
+
 }
