--- a/src/components/styles/admin_doctor.css
+++ b/src/components/styles/admin_doctor.css
@@ -35,7 +35,6 @@
   background-color: #003eaa;
 }
 
-
 .modal h3 {
   margin-bottom: 2rem;
   color: #085cda;
@@ -71,16 +70,13 @@
   margin-left: 20px;
   grid-template-columns: repeat(2, 1fr); /* two columns */
   gap: 20px 40px; /* 20px row-gap, 30px column-gap */
- 
 }
 
 .form-group {
   flex: 1 1 45%;
   display: flex;
   flex-direction: column;
-  
 }
-
 
 .form-group label {
   font-weight: 500;
@@ -97,7 +93,7 @@
   transition: border 0.3s ease, box-shadow 0.3s ease;
   outline: none;
 }
-.form-group .ant-select-selector{
+.form-group .ant-select-selector {
   font-size: 14px !important;
   border-radius: 4px !important;
   border: 1px solid #cfd6e1 !important; /* soft gray */
@@ -105,11 +101,62 @@
   transition: border 0.3s ease, box-shadow 0.3s ease;
   outline: none;
 }
-.form-group select,input:focus {
+.form-group select,
+input:focus {
   border-color: #085cda; /* bright blue */
   box-shadow: 0 0 0 2px rgba(8, 92, 218, 0.2); /* subtle blue glow */
   background-color: #e6edf8; /* optional: lighter background on focus */
 }
-.modal-overlay .modal{
+.modal-overlay .modal {
   width: 50%;
+}
+
+@media (max-width: 412px) {
+  .admin-container {
+    padding: 1rem;
+  }
+
+  .admin-header h2 {
+    font-size: 20px;
+  }
+
+  .add-admin-btn {
+    width: 100px;
+    font-size: 10px;
+    margin-right: 0px;
+  }
+  .form-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);   
+  }
+  
+
+  
+  .form-group input {
+    font-size: 13px;
+    padding: 8px 10px;
+  }
+
+  .form-group label {
+    flex-shrink: 0;
+    font-size: 16px;
+    min-width: 90px;
+  }
+
+  /* Modal responsiveness */
+  .modal-overlay .modal {
+    width: 80% !important;
+  }
+
+  .modal-buttons {
+    display: flex;
+    align-items: stretch;
+    gap: 10px;
+  }
+
+  .modal-buttons button {
+    width: 20%;
+    font-size: 14px;
+    padding: 10px;
+  }
 }
