--- a/src/components/styles/metadata.css
+++ b/src/components/styles/metadata.css
@@ -113,7 +113,7 @@
 }
 
 /* Modal Overlay */
-.modal-overlay {
+.modal-overlay-metadata {
   position: fixed;
   top: 0;
   left: 0;
@@ -126,15 +126,20 @@
   z-index: 1000;
 }
 
-.modal {
+.modal-overlay-metadata .modal {
   background: #fff;
   padding: 20px 30px;
   border-radius: 8px;
   width: 350px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+.modal-overlay-metadata .modal h3 {
+  margin-bottom: 2rem;
+  color: #085cda;
+  font-size: 1.25rem;
+}
 
-.modal input {
+.modal-overlay-metadata .modal input {
   width: 100%;
   margin: 10px 0;
   padding: 8px 12px;
@@ -150,7 +155,7 @@
 }
 
 
-.modal-overlay .modal{
+.modal-overlay-metadata .modal{
   width: 50%;
 }
 
@@ -189,16 +194,20 @@
     min-width: 360px; /* ensures horizontal scroll if needed */
   }
 
-  .form-grid {
-    display: flex;
-    gap: 50px;
-    margin: 0px 30px 0px 10px;
+  .modal-overlay-metadata .form-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two columns at 50% each */
+    gap: 20px 20px;
+    margin: 0px 15px;
   }
 
-  .form-group input {
+  modal-overlay-metadata .form-group {
+    width: 100%;
+  }
+
+  .modal-overlay-metadata .form-group input {
     font-size: 13px;
     padding: 8px 10px;
-    
   }
 
   .form-group label {
@@ -206,7 +215,7 @@
   }
 
   /* Modal responsiveness */
-  .modal {
+  .modal-overlay-metadata .modal {
     width: 80% !important;
     padding: 20px 15px;
     margin-bottom: 200px;
