--- a/src/components/styles/scancentres.css
+++ b/src/components/styles/scancentres.css
@@ -11,7 +11,7 @@
   font-weight: 600;
   margin: 0;
 }
-.modal-overlay {
+.modal-overlay-scancentre {
   position: fixed;
   top: 0;
   left: 0;
@@ -23,22 +23,31 @@
   align-items: center;
 }
 
-.modal {
+.modal-overlay-scancentre .modal {
   background: white;
-  padding: 20px;
-  width: 500px;
+  padding: 2rem;
   border-radius: 8px;
+  width: 50%;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
-.form-grid {
-  display: grid;
-  gap: 15px;
-  margin-top: 15px;
+.modal-overlay-scancentre .form-grid {
+  display: grid !important;
+  margin-right: 20px !important;
+  margin-left: 20px !important;
+  grid-template-columns: repeat(2, 1fr) !important;
+  gap: 20px 40px !important;
 }
 
-.form-group {
+.modal-overlay-scancentre .form-grid .form-group {
   display: flex;
   flex-direction: column;
+}
+.modal-overlay-scancentre .modal h3 {
+  margin-bottom: 2rem;
+  color: #085cda;
+  font-size: 1.25rem;
 }
 
 .modal-buttons {
@@ -46,4 +55,40 @@
   justify-content: flex-end;
   gap: 10px;
   margin-top: 20px;
+}
+
+@media (max-width: 412px) {
+  .admin-container {
+    padding: 1rem;
+  }
+
+  .admin-header h2 {
+    font-size: 10px;
+  }
+
+  .add-admin-btn {
+    
+    font-size: 10px;
+    
+  }
+  .modal-overlay-scancentre .modal {
+    width: 80% !important;
+    height: 50% !important;
+    margin-top: 40%;
+    margin: 20px;
+    
+  }
+
+   .modal-overlay-scancentre .form-grid {
+    grid-template-columns: 1fr !important;
+    flex-direction: column;
+  }
+  .modal-overlay-scancentre .form-group {
+    width: 100%;
+    
+  }
+
+  .modal-buttons button{
+    margin-top: 20px;
+  }
 }
