--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
-
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -70,9 +69,9 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-weight: 600;
-  font-size: .9rem;
+  font-size: 0.9rem;
   margin-bottom: 1rem;
-  transition: opacity .3s ease;
+  transition: opacity 0.3s ease;
   opacity: 1;
   padding-top: 0%;
 }
@@ -83,7 +82,7 @@ body {
 }
 
 .nav-links a {
-  padding: .9rem 2rem !important;
+  padding: 0.9rem 2rem !important;
   color: #fff;
   text-decoration: none;
   border-radius: 6px;
@@ -124,23 +123,6 @@ body {
   font-size: 15px;
 }
 
-.header-buttons {
-  display: flex;
-  gap: 10px;
-}
-
-.logout-button {
-  background-color: #085cda;
-  color: white;
-  border: none;
-  padding: 11px 14px;
-  border-radius: 4px;
-  cursor: pointer;
-  width: 110px;
-  font-size: 14px;
-  font-weight: 540;
-}
-
 /* Sidebar Toggle */
 .main-content.full-width {
   margin-left: 0;
@@ -160,48 +142,35 @@ body {
   align-self: flex-end;
 }
 
-@media (max-width:412px){
-  
+@media (max-width: 412px) {
   .sidebar.collapsed {
     width: 30px;
-    
   }
 
-  .sidebar{
+  .sidebar {
     width: 100px;
   }
 
-  .sidebar-title{
+  .sidebar-title {
     font-size: 19px;
   }
 
-  .admin-label{
+  .admin-label {
     font-size: 11px;
   }
 
-  .nav-links a{
+  .nav-links a {
     font-size: 15px;
     padding-left: 50px;
     justify-content: center;
-    
   }
   .menu-toggle {
     font-size: 22px;
     margin: 0px 0px 0px 30% !important;
-    padding: 0px 0px 0px 20% !important;    
-  
-}
+    padding: 0px 0px 0px 20% !important;
+  }
 
-.user-name{
-  font-size:10px;
-  
-}
-
-.logout-button{
-  width: 80px;
-  font-size:10px;
-  margin-right: 0px;
- 
-}
-
+  .user-name {
+    font-size: 10px;
+  }
 }
